# astrology-in-haskell

./: Compatibility.hs  Costar.hs  Database.hs  Parser.hs  README.md  costar.cabal  users.csv
